--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,2 @@
 Bubble-Generator/3D-profile/bubbles_time_001_vf_ck_Umix_0p174_1s-test.csv
+Bubble-Generator/3D-profile/bubbles_time_001_vf_ck_Umix_0p174_1s-test.csv
